// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Breadcrumbs examples > Breadcrumbs with SVG separator should render correctly 1`] = `
<div>
  <nav
    aria-label="Custom svg separator breadcrumbs"
    class="v-breadcrumbs v-breadcrumbs-custom"
  >
    <ol>
      <li>
        <a
          class="v-link"
          href="./"
        >
          L1 label
        </a>
         
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
      </li>
      <li>
        <a
          class="v-link"
          href="./"
        >
          L2 label
        </a>
         
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
      </li>
      <li>
        <a
          class="v-link"
          href="./"
        >
          L3 label
        </a>
         
        <svg
          aria-hidden="true"
          class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl"
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="v-icon-primary"
            d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
          />
        </svg>
      </li>
      <li>
        <span
          aria-current="page"
        >
          L4 label
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumbs examples > Breadcrumbs with custom separator should render correctly 1`] = `
<div>
  <nav
    aria-label="Custom separator breadcrumbs"
    class="v-breadcrumbs"
    style="--v-breadcrumbs-pseudo-separator: '+';"
  >
    <ol>
      <li>
        <a
          class="v-link"
          href="./"
        >
          L1 label
        </a>
      </li>
      <li>
        <a
          class="v-link"
          href="./"
        >
          L2 label
        </a>
      </li>
      <li>
        <a
          class="v-link"
          href="./"
        >
          L3 label
        </a>
      </li>
      <li>
        <span
          aria-current="page"
        >
          L4 label
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumbs examples > Breadcrumbs with default separator should render correctly 1`] = `
<div>
  <nav
    aria-label="Default breadcrumbs"
    class="v-breadcrumbs"
  >
    <ol>
      <li>
        <a
          class="v-link"
          href="./"
        >
          L1 label
        </a>
      </li>
      <li>
        <a
          class="v-link"
          href="./"
        >
          L2 label
        </a>
      </li>
      <li>
        <a
          class="v-link"
          href="./"
        >
          L3 label
        </a>
      </li>
      <li>
        <span
          aria-current="page"
        >
          L4 label
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumbs examples > Breadcrumbs with inline separator should render correctly 1`] = `
<div>
  <nav
    aria-label="Inline separator breadcrumbs"
    class="v-breadcrumbs v-breadcrumbs-custom"
  >
    <ol>
      <li>
        <a
          class="v-link"
          href="./"
        >
          L1 label
        </a>
         
        <span
          aria-hidden="true"
        >
          |
        </span>
      </li>
      <li>
        <a
          class="v-link"
          href="./"
        >
          L2 label
        </a>
         
        <span
          aria-hidden="true"
        >
          |
        </span>
      </li>
      <li>
        <a
          class="v-link"
          href="./"
        >
          L3 label
        </a>
         
        <span
          aria-hidden="true"
        >
          |
        </span>
      </li>
      <li>
        <span
          aria-current="page"
        >
          L4 label
        </span>
      </li>
    </ol>
  </nav>
</div>
`;
